kubernetes/prod/homeassistant/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:latest # {"$imagepolicy": "flux-system:homeassistant"}
          securityContext:
            privileged: true
            #capabilities:
            #  add:
            #    - NET_ADMIN
            #    - NET_RAW
            #    - SYS_ADMIN
          ports:
            - containerPort: 8123
              protocol: TCP
            - containerPort: 5683
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              name: configmap-file
      #hostNetwork: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
        - name: configmap-file
          configMap:
            name: homeassistant-configmap
