kubernetes/prod/homeassistant/homeassistant/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: homeassistant
  name: homeassistant
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.202.156
  ports:
  - port: 80
    targetPort: 8123
    protocol: TCP
  selector:
    app: homeassistant
