kubernetes/prod/homeassistant/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: homeassistant
    app.kubernetes.io/name: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  ingressClassName: traefik
  rules:
  - host: homeassistant.nmoura.pt
    http:
      paths:
      - backend:
          service:
            name: homeassistant
            port:
              number: 8123
        path: /
        pathType: Prefix
    tls: 
      secretName: nmoura-pt-tls
      hosts:
        - homeassistant.nmoura.pt
status:
  loadBalancer: {}
